up all the dates

--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
   .content {margin-left: 20px; } 
   h2 { margin-bottom: 0px }
   .h0 { font-size: 40px }
+
+@font-face {
+  font-family:'PT Sans';
+  src:local('PT Sans'), local('PTSansRegular'),
+    url(fonts/PTSans.ttf) format('truetype'),
+    url(fonts/PTSans.svg#PTSans-Regular) format('svg');
+  }
 </style>
 
 <div class="content">
@@ -14,7 +21,7 @@
 
 <h2>PyCon AU, Brisbane, August 2015</h2>
 <li>OpenStack MiniConf Lightning Talk: "xyz, abc, def"
-<li>Build a Better Hat Rack: All Contributions Welcome
+<li><a href="2015_08_Pycon_Hatrack">Build a Better Hat Rack: All Contributions Welcome</a>
 <li>Life After Death: How to handle abandoned projects
 
 <h2>DevOpsDays Melbourne, July 2015</h2>
