--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <li><a href="2015_09_KiwiPyCon">Build a Better Hat Rack: All Contributions Welcome</a>
 
 <h2>PyCon AU, Brisbane, August 2015</h2>
-<li><a href="2015_08_PyCon_AU">Build a Better Hat Rack: All Contributions Welcome</a>
+<li><a href="2015_08_PyCon_AU">Build a Better Hat Rack: All Contributions Welcome</a> <a href="https://www.youtube.com/watch?v=wNWrr19gE0Y">[Video]</a>
 
 <h2>DevOpsDays Melbourne, July 2015</h2>
 <li>Panel: The platform or the road map? (No slides) (Video pending)
