Update talk list

--- a/index.html
+++ b/index.html
@@ -23,12 +23,15 @@
 <h2>Kiwi PyCon, Christchurch, September 2015</h2>
 <li><a href="2015_09_KiwiPyCon">Build a Better Hat Rack: All Contributions Welcome</a>
 
+<h2>SydPHP, Sydney, August 2015</h2>
+<li><a href="2015_08_SydPHP">Life After Death: How to handle abandoned projects</a>
+
 <h2>PyCon AU, Brisbane, August 2015</h2>
 <li><a href="2015_08_PyCon_AU">Build a Better Hat Rack: All Contributions Welcome</a> <a href="https://www.youtube.com/watch?v=wNWrr19gE0Y">[Video]</a>
 
 <h2>DevOpsDays Melbourne, July 2015</h2>
-<li>Panel: The platform or the road map? (No slides) (Video pending)
-<li>Ignite Karaoke (No slides) (Video pending)
+<li>Panel: The platform or the road map? (No slides)
+<li>Ignite Karaoke (No slides)
 
 <h2>Linux Conference Australia, Auckland, January 2015</h2>
 
@@ -42,6 +45,9 @@
 <br><br>
 <h1>Workshops</h1>
 
+<h2>Open Source Developers Conference, Hobart, November 2015</h2>
+<li>Hack the Planet: A practical guide to web application vulnerabilities
+
 <h2>Port80 Sydney, June, 2015</h2>
 <li><a href="2015_06_Port80/Workshop.pdf">Introduction to hacking OWASP</a>
 
@@ -51,6 +57,12 @@
 
 </td><td>
 <h1>Lightning Talks</h1>
+
+<h2>PHP New Zealand Warmup, Wellington, September 2015</h2>
+<li>Hat Rack
+
+<h2>OpenStack Miniconf, PyCon AU, Brisbane, August 2015</h2>
+<li><a href="https://twitter.com/glasnt/status/626897751335309312">"xyz, abc, def"</a> <a href="https://twitter.com/glasnt/status/627020535646412800">[Feedback]</a>
 
 <h2>Python Sydney (SyPy), July 2015</h2>
 <li><a href="2015_07_SyPy">Hat Rack</a>
@@ -64,7 +76,7 @@
 <h2>DevOps, Sydney, March 2015</h2>
 <li><a href="2015_03_DevOps/HatRack.pdf">Hat Rack</a>
 
-<h2>SydPHP, Sydney, March 2015</h2>
+<h2>PHP Australia Warm Up, hosted by SydPHP, Sydney, March 2015</h2>
 <li><a href="2015_03_SydPHP/HatRack.pdf">Hat Rack</a>
 
 <h2>Women Who Code, Sydney, December 2014</h2>
