--- a/JSRant/slides/adopt_00.html
+++ b/JSRant/slides/adopt_00.html
@@ -1,5 +1,5 @@
 <section>
 <div class="embiggen default">
-ECMAScript 6 not yet ratified<br>
+ECMAScript 6 <br>not yet ratified<br>
 </div>
 </section>
