--- a/JSRant/slides/adopt_02.html
+++ b/JSRant/slides/adopt_02.html
@@ -1,5 +1,5 @@
 <section>
 <div class="embiggen default">
-kangax.github.io/<br>compat-table/es6/<br>
+You can use it<br/> right now<br>
 </div>
 </section>
