--- a/JSRant/slides/adopt_03.html
+++ b/JSRant/slides/adopt_03.html
@@ -1,6 +1,5 @@
 <section>
 <div class="embiggen default">
-JavaScript<br>
-Inconsistency
+kangax.github.io/<br>compat-table/es6/<br>
 </div>
 </section>
