--- a/JSRant/slides/better_07.html
+++ b/JSRant/slides/better_07.html
@@ -1,12 +1,11 @@
 <section>
 <div class="embiggen">
 <pre>
-<comment>// Ye Olde Javascript</comment>
+<comment>// Ye Olde JavaScript</comment>
 function q(ans) { 
   ans = ans || 42;
   return ans;
 }
-
 <comment>// ECMAScript 6</comment>
 function q(ans<highlight>=42</highlight>) { 
   return ans;
