--- a/JSRant/slides/better_09.html
+++ b/JSRant/slides/better_09.html
@@ -2,10 +2,11 @@
 <div class="embiggen">
 <pre>
 <comment>// Ye Olde JavaScript</comment>
-function q() { 
-  var ans = 42;
-  return ans;
-}
+var universe = { 
+  a: [42, 42] 
+} 
+ans1 = universe.a[0]
+ans2 = universe.a[1]
 
 </pre>
 </div>
