--- a/JSRant/slides/better_03.html
+++ b/JSRant/slides/better_03.html
@@ -1,7 +1,7 @@
 <section>
 <div class="embiggen">
 <pre>
-<comment>// Ye Olde Javascript</comment>
+<comment>// Ye Olde JavaScript</comment>
 thing.do(function() { 
   console.log("YAY")
 })
