--- a/JSRant/slides/better_05.html
+++ b/JSRant/slides/better_05.html
@@ -1,12 +1,11 @@
 <section>
 <div class="embiggen">
 <pre>
-<comment>// Ye Olde Javascript</comment>
+<comment>// Ye Olde JavaScript</comment>
 function q() { 
   var ans = 42;
   return ans;
 }
-
 <comment>// ECMAScript 6</comment>
 function() { 
   <highlight>let</highlight> ans = 42;
