--- a/JSRant/slides/better_06.html
+++ b/JSRant/slides/better_06.html
@@ -1,7 +1,7 @@
 <section>
 <div class="embiggen">
 <pre>
-<comment>// Ye Olde Javascript</comment>
+<comment>// Ye Olde JavaScript</comment>
 function q(ans) { 
   ans = ans || 42;
   return ans;
