Update urls, listings

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 <li><a href="2015_08_PyCon_AU">Build a Better Hat Rack: All Contributions Welcome</a> <a href="https://www.youtube.com/watch?v=wNWrr19gE0Y">[Video]</a>
 
 <h2>DevOpsDays Melbourne, July 2015</h2>
-<li>Panel: The platform or the road map? (No slides)
-<li>Ignite Karaoke (No slides)
+<li>Panel: The platform or the road map? <a href="https://twitter.com/auxesis/status/621820255241793536">[buzz]</a>
+<li>Ignite Karaoke <a href="https://twitter.com/s_mcleod/status/621899282757464064">[buzz]</a>
 
 <h2>Linux Conference Australia, Auckland, January 2015</h2>
 
@@ -41,7 +41,7 @@
 <h2>Open Source Developers Conference, Gold Coast, October 2014</h2>
 
 <li><a href="2014_10_OSDC_Gyprock">Disentangle a new fangled image mangler</a> <a href="https://www.youtube.com/watch?v=bQfkXh__vnc">[Video]</a>
-<li><a href="2014_11_OSDC_Machiavelli">Before All Else, Be Graphed</a> <a href="https://www.youtube.com/watch?v=6i0kMCOOIaY">[Video]</a>
+<li><a href="2014_10_OSDC_Machiavelli">Before All Else, Be Graphed</a> <a href="https://www.youtube.com/watch?v=6i0kMCOOIaY">[Video]</a>
 <br><br>
 <h1>Workshops</h1>
 
