--- a/2015_08_SydPHP/index.html
+++ b/2015_08_SydPHP/index.html
@@ -25,7 +25,7 @@
     <div class="reveal">
       <div class="slides">
         <section data-markdown="slides.md"
-           data-separator="^\n\n\n"
+           data-separator="---"
            data-separator-notes="^Note:"
            data-charset="utf-8">
         </section>
