--- a/2015_08_SydPHP/index.html
+++ b/2015_08_SydPHP/index.html
@@ -34,15 +34,12 @@
     <script src="lib/js/head.min.js"></script>
     <script src="js/reveal.js"></script>
     <script>
-      // Full list of configuration options available at:
-      // https://github.com/hakimel/reveal.js#configuration
       Reveal.initialize({
         controls: false,
         progress: false,
         history: true,
         center: false,
-        transition: 'none', // none/fade/slide/convex/concave/zoom
-        // Optional reveal.js plugins
+        transition: 'none',
         dependencies: [
           { src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
           { src: 'plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
