--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
 </td><td>
 <h1>Lightning Talks</h1>
 
+
 <h2>PHP New Zealand Warmup, Wellington, September 2015</h2>
-<li>Hat Rack
+<li><a href="2015_09_PHPWellington">Hat Rack</a>
 
 <h2>OpenStack Miniconf, PyCon AU, Brisbane, August 2015</h2>
 <li><a href="https://twitter.com/glasnt/status/626897751335309312">"xyz, abc, def"</a> <a href="https://twitter.com/glasnt/status/627020535646412800">[Feedback]</a>
