Font file fixes - android appears to have issues

--- a/2015_09_PHPWellington/index.html
+++ b/2015_09_PHPWellington/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
     <link rel="stylesheet" href="css/reveal.css">
     <link rel="stylesheet" href="css/theme/projection_white.css" id="theme">
+    <link rel="stylesheet" href="lib/font/pt-sans/pt-sans.css">
     <link rel="stylesheet" href="lib/css/zenburn.css">
     <script>
       var link = document.createElement( 'link' );
