--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 <h2>Kiwi PyCon, Christchurch, September 2015</h2>
 <li><a href="2015_09_KiwiPyCon">Build a Better Hat Rack: All Contributions Welcome</a>
 
+<h2>/dev/world, Melbourne, August 2015</h2>
+<li><a href="2015_08_DevWorld">Build a Better Hat Rack: All Contributions Welcome</a>
+
 <h2>SydPHP, Sydney, August 2015</h2>
 <li><a href="2015_08_SydPHP">Life After Death: How to handle abandoned projects</a>
 
