--- a/2015_09_KiwiPyCon_Lightning/slides/better_08.html
+++ b/2015_09_KiwiPyCon_Lightning/slides/better_08.html
@@ -3,7 +3,7 @@
 <pre>
 <comment>// ECMAScript 6</comment>
 <highlight>const</highlight> ANS = 42;
-ans = 34;
+ANS = 34;
 > Error: ANS is read only
 </pre>
 </div>
