--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
 <table><tr><td>
 <h1>Full Talks</h1>
 
+<h2>Open Source Developers Conference, Hobart, November 2015</h2>
+<li>JavaScript is Awe-ful
+
 <h2>Kiwi PyCon, Christchurch, September 2015</h2>
-<li><a href="2015_09_KiwiPyCon">Build a Better Hat Rack: All Contributions Welcome</a>
+<li><a href="2015_09_KiwiPyCon">Build a Better Hat Rack: All Contributions Welcome</a> <a href="https://www.youtube.com/watch?v=wQxFKxbWcFM">[Video]</a>
 
 <h2>/dev/world, Melbourne, August 2015</h2>
 <li><a href="2015_08_DevWorld">Build a Better Hat Rack: All Contributions Welcome</a>
@@ -61,8 +64,13 @@
 </td><td>
 <h1>Lightning Talks</h1>
 
+<h2>Kiwi PyCon, Christchurch, September 2015</h2>
+<li><a href="2015_09_KiwiPyCon_Lightning">Yelling at JavaScript and its attempt at local variables</a>
 
 <h2>PHP New Zealand Warmup, Wellington, September 2015</h2>
+<li><a href="2015_09_PHPWellington">Hat Rack</a>
+
+<h2>/dev/world, Melbourne, August 2015</h2>
 <li><a href="2015_09_PHPWellington">Hat Rack</a>
 
 <h2>OpenStack Miniconf, PyCon AU, Brisbane, August 2015</h2>
