I are good at dates

--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
 <table><tr><td>
 <h1>Full Talks</h1>
 
-<h2>Open Source Developers Conference, Hobart, November 2015</h2>
+<h2>Open Source Developers Conference, Hobart, October 2015</h2>
 <li>JavaScript is Awe-ful
+
+<h2>JoomlaDay, Brisbane, October 2015</h2>
+<li>Keynote: Build a Better Hat Rack: All Contributions Welcome
 
 <h2>Kiwi PyCon, Christchurch, September 2015</h2>
 <li><a href="2015_09_KiwiPyCon">Build a Better Hat Rack: All Contributions Welcome</a> <a href="https://www.youtube.com/watch?v=wQxFKxbWcFM">[Video]</a>
@@ -51,8 +54,11 @@
 <br><br>
 <h1>Workshops</h1>
 
-<h2>Open Source Developers Conference, Hobart, November 2015</h2>
+<h2>Open Source Developers Conference, Hobart, October 2015</h2>
 <li>Hack the Planet: A practical guide to web application vulnerabilities
+
+<h2>JoomlaDay, Brisbane, October 2015</h2>
+<li>Hack Yourself First
 
 <h2>Port80 Sydney, June, 2015</h2>
 <li><a href="2015_06_Port80/Workshop.pdf">Introduction to hacking OWASP</a>
