--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
 
 <h2>DevOpsDays Melbourne, July 2015</h2>
 <li>Panel: The platform or the road map? <a href="https://twitter.com/auxesis/status/621820255241793536">[buzz]</a>
-<li>Ignite Karaoke <a href="https://twitter.com/s_mcleod/status/621899282757464064">[buzz]</a>
+
+<h2>Ruby on Rails Oceania, Sydney, April 2015</h2>
+<li><a href="2015_04_RoroSyd">Disentangle a new fangled image mangler</a>
 
 <h2>Linux Conference Australia, Auckland, January 2015</h2>
 
@@ -85,11 +87,11 @@
 <h2>Python Sydney (SyPy), July 2015</h2>
 <li><a href="2015_07_SyPy">Hat Rack</a>
 
+<h2>DevOpsDays Melbourne, July 2015</h2>
+<li>Ignite Karaoke <a href="https://twitter.com/s_mcleod/status/621899282757464064">[buzz]</a>
+
 <h2>DevOps Sydney, June, 2015</h2>
 <li><a href="2015_06_DevOps">JavaScript Rant</a> <a href="https://www.youtube.com/watch?v=nx0yt0YsDnA">[Video]</a>
-
-<h2>Ruby on Rails Oceania, Sydney, April 2015</h2>
-<li><a href="2015_04_RoroSyd">Disentangle a new fangled image mangler</a>
 
 <h2>DevOps, Sydney, March 2015</h2>
 <li><a href="2015_03_DevOps/HatRack.pdf">Hat Rack</a>
