--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <li>JavaScript is Awe-ful
 
 <h2>JoomlaDay, Brisbane, October 2015</h2>
-<li>Keynote: Build a Better Hat Rack: All Contributions Welcome
+<li><a href="2015_10_JoomlaDay_Keynote">Keynote: Build a Better Hat Rack: All Contributions Welcome</a>
 
 <h2>Kiwi PyCon, Christchurch, September 2015</h2>
 <li><a href="2015_09_KiwiPyCon">Build a Better Hat Rack: All Contributions Welcome</a> <a href="https://www.youtube.com/watch?v=wQxFKxbWcFM">[Video]</a>
