Update homepage link.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <li>Hack the Planet: A practical guide to web application vulnerabilities
 
 <h2>JoomlaDay, Brisbane, October 2015</h2>
-<li>Hack Yourself First
+<li><a href="2015_10_JoomlaDay_Workshop">Hack Yourself First</a>
 
 <h2>Port80 Sydney, June, 2015</h2>
 <li><a href="2015_06_Port80/Workshop.pdf">Introduction to hacking OWASP</a>
