--- a/2015_10_JoomlaDay_Keynote/index.html
+++ b/2015_10_JoomlaDay_Keynote/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/theme/projection_white.css" id="theme">
     <link rel="stylesheet" href="lib/font/pt-sans/pt-sans.css"> 
     <link rel="stylesheet" href="lib/css/zenburn.css">
+    <link rel="stylesheet" href="css/glasnt.css">
     <script>
       var link = document.createElement( 'link' );
       link.rel = 'stylesheet';
