--- a/HatRack/index.html
+++ b/HatRack/index.html
@@ -7,6 +7,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
     <link rel="stylesheet" href="css/reveal.css">
+    <link rel="stylesheet" href="css/glasnt.css">
     <link rel="stylesheet" href="css/theme/projection_white.css" id="theme">
     <link rel="stylesheet" href="lib/font/pt-sans/pt-sans.css">
     <link rel="stylesheet" href="lib/css/zenburn.css">
