--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <h1>Full Talks</h1>
 
 <h2>Open Source Developers Conference, Hobart, October 2015</h2>
-<li>JavaScript is Awe-ful
+<li><a href="2015_10_OSDC_JavaScript">JavaScript is Awe-ful</a>
 
 <h2>JoomlaDay, Brisbane, October 2015</h2>
 <li><a href="2015_10_JoomlaDay_Keynote">Keynote: Build a Better Hat Rack: All Contributions Welcome</a>
