Add link to workshop

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <h1>Workshops</h1>
 
 <h2>Open Source Developers Conference, Hobart, October 2015</h2>
-<li>Hack the Planet: A practical guide to web application vulnerabilities
+<li><a href="2015_10_OSDC_Workshop">Hack the Planet: A practical guide to web application vulnerabilities</a>
 
 <h2>JoomlaDay, Brisbane, October 2015</h2>
 <li><a href="2015_10_JoomlaDay_Workshop">Hack Yourself First</a>
