Link to more videos

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <h1>Full Talks</h1>
 
 <h2>Open Source Developers Conference, Hobart, October 2015</h2>
-<li><a href="2015_10_OSDC_JavaScript">JavaScript is Awe-ful</a>
+<li><a href="2015_10_OSDC_JavaScript">JavaScript is Awe-ful</a> <a href="https://www.youtube.com/watch?v=kK5kp5tjJyc">[Video]</a>
 
 <h2>JoomlaDay, Brisbane, October 2015</h2>
 <li><a href="2015_10_JoomlaDay_Keynote">Keynote: Build a Better Hat Rack: All Contributions Welcome</a>
@@ -72,11 +72,15 @@
 </td><td>
 <h1>Lightning Talks</h1>
 
+<h2>Open Source Developers Conference, Hobart, October 2015</h2>
+<li><a href="HatRack">Hat Rack</a> <a href="https://youtu.be/1xWQ_eUuGmk?t=2211">[Video]</a>
+<li>Serialization Formats are Not Toys <a href="https://youtu.be/BXv9KpYrW0w?t=1761">[Video]</a>
+
 <h2>Kiwi PyCon, Christchurch, September 2015</h2>
-<li><a href="2015_09_KiwiPyCon_Lightning">Yelling at JavaScript and its attempt at local variables</a>
+<li><a href="2015_09_KiwiPyCon_Lightning">Yelling at JavaScript and its attempt at local variables</a> <a href="https://youtu.be/_35tn0KrVMo?list=PLBGl1tVyiWQTimQA8ZVUTO7HipxJqYwm0&t=2370">[Video (starts 39:30)]</a>
 
 <h2>PHP New Zealand Warmup, Wellington, September 2015</h2>
-<li><a href="2015_09_PHPWellington">Hat Rack</a>
+<li><a href="2015_09_PHPWellington">Hat Rack</a> <a href="https://vimeo.com/139304197">[Video]</a>
 
 <h2>/dev/world, Melbourne, August 2015</h2>
 <li><a href="2015_09_PHPWellington">Hat Rack</a>
