--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <li><a href="2015_09_KiwiPyCon">Build a Better Hat Rack: All Contributions Welcome</a> <a href="https://www.youtube.com/watch?v=wQxFKxbWcFM">[Video]</a>
 
 <h2>/dev/world, Melbourne, August 2015</h2>
-<li><a href="2015_08_DevWorld">Build a Better Hat Rack: All Contributions Welcome</a>
+<li><a href="2015_08_DevWorld">Build a Better Hat Rack: All Contributions Welcome</a> <a href="https://www.youtube.com/watch?v=yQGrLrLgT-M">[Video]</a>
 
 <h2>SydPHP, Sydney, August 2015</h2>
 <li><a href="2015_08_SydPHP">Life After Death: How to handle abandoned projects</a>
@@ -73,8 +73,8 @@
 <h1>Lightning Talks</h1>
 
 <h2>Open Source Developers Conference, Hobart, October 2015</h2>
-<li><a href="HatRack">Hat Rack</a> <a href="https://youtu.be/1xWQ_eUuGmk?t=2211">[Video]</a>
-<li>Serialization Formats are Not Toys <a href="https://youtu.be/BXv9KpYrW0w?t=1761">[Video]</a>
+<li><a href="HatRack">Hat Rack</a> <a href="https://youtu.be/1xWQ_eUuGmk?t=2211">[Video (starts at 36:50)]</a>
+<li>Serialization Formats are Not Toys (Cover Version) <a href="https://youtu.be/BXv9KpYrW0w?t=1761">[Video (starts at 29:20)]</a>
 
 <h2>Kiwi PyCon, Christchurch, September 2015</h2>
 <li><a href="2015_09_KiwiPyCon_Lightning">Yelling at JavaScript and its attempt at local variables</a> <a href="https://youtu.be/_35tn0KrVMo?list=PLBGl1tVyiWQTimQA8ZVUTO7HipxJqYwm0&t=2370">[Video (starts 39:30)]</a>
