Make talks page a bit prettier

--- a/index.html
+++ b/index.html
@@ -1,116 +1,218 @@
-<style> 
-  td { vertical-align: top; padding: 0 40 0 0;}
-  body { font-family: 'PT Sans'; } 
-  .content {margin-left: 20px; } 
-  h2 { margin-bottom: 0px; }
-  .h0 { font-size: 40px }
-  h1, h2 { font-weight: normal}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <link rel="stylesheet" href="css/normalize.css" />
+  <link rel="stylesheet" href="css/skeleton.css" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" />
+</head>
 
-@font-face {
-  font-family:'PT Sans';
-  src:local('PT Sans'), local('PTSansRegular'),
-    url(fonts/PTSans.ttf) format('truetype'),
-    url(fonts/PTSans.svg#PTSans-Regular) format('svg');
-  }
-</style>
-
-<div class="content">
-<div class="h0">glasnt's talks</div>
-<br><br><br><br>
-<table><tr><td>
-<h1>Full Talks</h1>
-
-<h2>Open Source Developers Conference, Hobart, October 2015</h2>
-<li><a href="2015_10_OSDC_JavaScript">JavaScript is Awe-ful</a> <a href="https://www.youtube.com/watch?v=kK5kp5tjJyc">[Video]</a>
-
-<h2>JoomlaDay, Brisbane, October 2015</h2>
-<li><a href="2015_10_JoomlaDay_Keynote">Keynote: Build a Better Hat Rack: All Contributions Welcome</a>
-
-<h2>Kiwi PyCon, Christchurch, September 2015</h2>
-<li><a href="2015_09_KiwiPyCon">Build a Better Hat Rack: All Contributions Welcome</a> <a href="https://www.youtube.com/watch?v=wQxFKxbWcFM">[Video]</a>
-
-<h2>/dev/world, Melbourne, August 2015</h2>
-<li><a href="2015_08_DevWorld">Build a Better Hat Rack: All Contributions Welcome</a> <a href="https://www.youtube.com/watch?v=yQGrLrLgT-M">[Video]</a>
-
-<h2>SydPHP, Sydney, August 2015</h2>
-<li><a href="2015_08_SydPHP">Life After Death: How to handle abandoned projects</a>
-
-<h2>PyCon AU, Brisbane, August 2015</h2>
-<li><a href="2015_08_PyCon_AU">Build a Better Hat Rack: All Contributions Welcome</a> <a href="https://www.youtube.com/watch?v=wNWrr19gE0Y">[Video]</a>
-
-<h2>DevOpsDays Melbourne, July 2015</h2>
-<li>Panel: The platform or the road map? <a href="https://twitter.com/auxesis/status/621820255241793536">[buzz]</a>
-
-<h2>Ruby on Rails Oceania, Sydney, April 2015</h2>
-<li><a href="2015_04_RoroSyd">Disentangle a new fangled image mangler</a>
-
-<h2>Linux Conference Australia, Auckland, January 2015</h2>
-
-<li><a href="2015_01_LCA_Gyprock">Disentangle a new fangled image mangler</a> <a href="https://www.youtube.com/watch?v=XedLGMp38xA">[Video]</a>
-<li><a href="2015_01_LCA_Machiavelli">Before All Else, Be Graphed</a> <a href="www.youtube.com/watch?v=My65wJ-sBVc">[Video]</a>
-
-<h2>Open Source Developers Conference, Gold Coast, October 2014</h2>
-
-<li><a href="2014_10_OSDC_Gyprock">Disentangle a new fangled image mangler</a> <a href="https://www.youtube.com/watch?v=bQfkXh__vnc">[Video]</a>
-<li><a href="2014_10_OSDC_Machiavelli">Before All Else, Be Graphed</a> <a href="https://www.youtube.com/watch?v=6i0kMCOOIaY">[Video]</a>
-<br><br>
-<h1>Workshops</h1>
-
-<h2>Open Source Developers Conference, Hobart, October 2015</h2>
-<li><a href="2015_10_OSDC_Workshop">Hack the Planet: A practical guide to web application vulnerabilities</a>
-
-<h2>JoomlaDay, Brisbane, October 2015</h2>
-<li><a href="2015_10_JoomlaDay_Workshop">Hack Yourself First</a>
-
-<h2>Port80 Sydney, June, 2015</h2>
-<li><a href="2015_06_Port80/Workshop.pdf">Introduction to hacking OWASP</a>
-
-<h2>PhunConf 5 Workshop, Sydney, February 2015</h2>
-<li><a href="2015_02_PhunConf/SecurityTutorial.pdf">In ur s3rvs h4k1ng ur c0dez, a Security Tutorial</a>
+<body>
+  <div class="section">
+    <div class="container">
+      <h1 class="section-heading">Talks by Katie 'glasnt' McLaughlin</h1>
+    </div>
+  </div>
 
 
-</td><td>
-<h1>Lightning Talks</h1>
+  <div class="section">
+    <div class="container">
+        <div class="row">
+          <div class="four columns">Open Source Developers Conference<br>Hobart, October 2015</div>
+          <div class="four columns">JavaScript is Awe-ful</div>
+          <div class="two columns">Talk</div>
+          <div class="two columns"><a href="2015_10_OSDC_JavaScript">Slides</a> | <a href="https://www.youtube.com/watch?v=kK5kp5tjJyc">Video</a></div>
+        </div>
+        <div class="row">
+          <div class="four columns">&nbsp;</div>
+          <div class="four columns">Hack the Planet: A practical guide to web application vulnerabilities</div>
+          <div class="two columns">Workshop</div>
+          <div class="two columns"><a href="2015_10_OSDC_Workshop">Slides</a></div>
+        </div>
+        <div class="row">
+          <div class="four columns">&nbsp;</div>
+          <div class="four columns">Hat Rack</div>
+          <div class="two columns">Lightning Talk</div>
+          <div class="two columns"><a href="HatRack">Slides</a> |  <a href="https://youtu.be/1xWQ_eUuGmk?t=2211">Video</a></div>
+        </div>
+        <div class="row">
+          <div class="four columns">&nbsp;</div>
+          <div class="four columns">Serialization Formats are Not Toys (Cover Version)</div>
+          <div class="two columns">Lightning Talk</div>
+          <div class="two columns"><a href="http://s3.eastman.net.nz/serialization/">Slides</a> | <a href="https://youtu.be/BXv9KpYrW0w?t=1761">Video</a></div>
+        </div>
+        <div class="row">&nbsp;</div>
+        <div class="row">
+          <div class="four columns">JoomlaDay Australia</br>Brisbane, October 2015</div>
+          <div class="four columns">Build a Better Hat Rack: All Contributions Welcome</div>
+          <div class="two columns">Keynote</div>
+          <div class="two columns"><a href="2015_10_JoomlaDay_Keynote">Slides</a></div>
+        </div>
+        <div class="row">
+          <div class="four columns">&nbsp;</div>
+          <div class="four columns">Hack the Planet: A practical guide to web application vulnerabilities</div>
+          <div class="two columns">Workshop</div>
+          <div class="two columns"><a href="2015_10_JoomlaDay_Workshop">Slides</a></div>
+        </div>
+        <div class="row">&nbsp;</div>
+        <div class="row">
+          <div class="four columns">Kiwi PyCon<br>Christchurch, September 2015</div>
+          <div class="four columns">Build a Better Hat Rack: All Contributions Welcome</div>
+          <div class="two columns">Talk</div>
+          <div class="two columns"><a href="2015_09_KiwiPyCon">Slides</a> | <a href="https://www.youtube.com/watch?v=wQxFKxbWcFM">Video</a></div> 
+        </div>
+        <div class="row">
+          <div class="four columns">&nbsp;</div>
+          <div class="four columns">Yelling at JavaScript and its attempt at global variables<</div>
+          <div class="two columns">Lightning Talk</div>
+          <div class="two columns"><a href="2015_09_KiwiPyCon_Lightning">Slides</a> | <a href="https://youtu.be/_35tn0KrVMo?list=PLBGl1tVyiWQTimQA8ZVUTO7HipxJqYwm0&t=2370">Video</a></div> 
+        </div>
+	<div class="row">&nbsp;</div>
+        <div class="row">
+          <div class="four columns">PHP New Zealand Warm-Up<br>Wellington, September 2015</div>
+          <div class="four columns">Hat Rack</div>
+          <div class="two columns">Lightning Talk</div>
+          <div class="two columns"><a href="2015_09_PHPWellington">Slides</a></div> 
+        </div>
+	<div class="row">&nbsp;</div>
+        <div class="row">
+          <div class="four columns">/dev/world/<br>Melbourne, August 2015</div>
+          <div class="four columns">Build a Better Hat Rack: All Contributions Welcome</div>
+          <div class="two columns">Talk</div>
+          <div class="two columns"><a href="2015_08_DevWorld">Slides</a> | <a href="https://www.youtube.com/watch?v=yQGrLrLgT-M">Video</a></div>
+        </div>
+        <div class="row">&nbsp;</div>
+        <div class="row">
+          <div class="four columns">SydPHP<br>Sydney, August 2015</div>
+          <div class="four columns">Life After Death: How to handle abandoned projects</div>
+          <div class="two columns">Talk</div>
+          <div class="two columns"><a href="2015_08_SydPHP">Slides</a></div>
+        </div>
+        <div class="row">&nbsp;</div>
+        <div class="row">
+          <div class="four columns">PyCon AU<br>Brisbane, August 2015</div>
+          <div class="four columns">Build a Better Hat Rack: All Contributions Welcome</div>
+          <div class="two columns">Talk</div>
+          <div class="two columns"><a href="2015_08_PyCon_AU">Slides</a> | <a href="https://www.youtube.com/watch?v=wNWrr19gE0Y">Video</a></div>
+        </div>
+        <div class="row">&nbsp;</div>
+        <div class="row">
+          <div class="four columns">Sydney Python<br>Sydney, July 2015</div>
+          <div class="four columns">Hat Rack</div>
+          <div class="two columns">Lightning Talk</div>
+          <div class="two columns"><a href="2015_07_SyPy">Slides</a></div>
+        </div>
+	<div class="row">&nbsp;</div>
+        <div class="row">
+          <div class="four columns">OpenStack Miniconf<br>Brisbane, July 2015</div>
+          <div class="four columns">xyz, abc, def</div>
+          <div class="two columns">Lightning Talk</div>
+          <div class="two columns"><a href="https://twitter.com/glasnt/status/626897751335309312">Slide</a> | <a href="https://twitter.com/glasnt/status/627020535646412800">Feedback</a></div>
+        </div>
+   	<div class="row">&nbsp;</div>
+        <div class="row">
+          <div class="four columns">DevOpsDays<br>Melbourne, July 2015</div>
+          <div class="four columns">The platform or the road map? </div>
+          <div class="two columns">Panel</div>
+          <div class="two columns"><a href="https://twitter.com/auxesis/status/621820255241793536">Twitter</a></div>
+        </div>
+        <div class="row">
+          <div class="four columns">&nbsp;</div>
+          <div class="four columns">Ignite Karaoke</div>
+          <div class="two columns">Lightning Talk</div>
+          <div class="two columns"><a href="https://twitter.com/s_mcleod/status/621899282757464064">Twitter</a></div>
+        </div>
+        <div class="row">&nbsp;</div>
+        <div class="row">
+          <div class="four columns">DevOps<br>Sydney, June 2015</div>
+          <div class="four columns">JavaScript Rant</div>
+          <div class="two columns">Lightning Talk</div>
+          <div class="two columns"><a href="2015_06_DevOps">Slides</a> | <a href="https://www.youtube.com/watch?v=nx0yt0YsDnA">Video</a></div>
+        </div>
+   	<div class="row">&nbsp;</div>
+        <div class="row">
+          <div class="four columns">Port80 Sydney, June, 2015</div>
+          <div class="four columns">Introduction to hacking OWASP</div>
+          <div class="two columns">Workshop</div>
+          <div class="two columns"><a href="2015_06_Port80/Workshop.pdf">Slides</a></div>
+        </div>
+   	<div class="row">&nbsp;</div>
+        <div class="row">
+          <div class="four columns">Ruby on Rails Oceania<br>Sydney, April 2015</div>
+          <div class="four columns">Disentangle a new fangled image mangler</div>
+          <div class="two columns">Talk</div>
+          <div class="two columns"><a href="2015_04_RoroSyd">Slides</a></div>
+        </div>
 
-<h2>Open Source Developers Conference, Hobart, October 2015</h2>
-<li><a href="HatRack">Hat Rack</a> <a href="https://youtu.be/1xWQ_eUuGmk?t=2211">[Video (starts at 36:50)]</a>
-<li>Serialization Formats are Not Toys (Cover Version) <a href="https://youtu.be/BXv9KpYrW0w?t=1761">[Video (starts at 29:20)]</a>
 
-<h2>Kiwi PyCon, Christchurch, September 2015</h2>
-<li><a href="2015_09_KiwiPyCon_Lightning">Yelling at JavaScript and its attempt at local variables</a> <a href="https://youtu.be/_35tn0KrVMo?list=PLBGl1tVyiWQTimQA8ZVUTO7HipxJqYwm0&t=2370">[Video (starts 39:30)]</a>
+   	<div class="row">&nbsp;</div>
+        <div class="row">
+          <div class="four columns">PHP Australia Warm-Up<br>Sydney, March 2015</div>
+          <div class="four columns">In ur s3rvs h4k1ng ur c0dez, a Security Tutorial</div>
+          <div class="two columns">Lightning Talk</div>
+          <div class="two columns"><a href="2015_03_SydPHP/HatRack.pdf">Slides</a></div>
+        </div>
 
-<h2>PHP New Zealand Warmup, Wellington, September 2015</h2>
-<li><a href="2015_09_PHPWellington">Hat Rack</a> <a href="https://vimeo.com/139304197">[Video]</a>
+   	<div class="row">&nbsp;</div>
+        <div class="row">
+          <div class="four columns">DevOps<br>Sydney, March 2015</div>
+          <div class="four columns">Hat Rack</div>
+          <div class="two columns">Lightning Talk</div>
+          <div class="two columns"><a href="2015_03_DevOps/HatRack.pdf">Slides</a></div>
+        </div>
 
-<h2>/dev/world, Melbourne, August 2015</h2>
-<li><a href="2015_09_PHPWellington">Hat Rack</a>
+   	<div class="row">&nbsp;</div>
+        <div class="row">
+          <div class="four columns">PhunConf 5<br>Sydney, February 2015</div>
+          <div class="four columns">In ur s3rvs h4k1ng ur c0dez, a Security Tutorial</div>
+          <div class="two columns">Workshop</div>
+          <div class="two columns"><a href="2015_02_PhunConf/SecurityTutorial.pdf">Slides</a></div>
+        </div>
+ 	<div class="row">&nbsp;</div>
+        <div class="row">
+          <div class="four columns">Linux Conference Australia<br>Auckland, January 2015</div>
+          <div class="four columns">Before All Else, Be Graphed</div>
+          <div class="two columns">Talk</div>
+          <div class="two columns"><a href="2015_01_LCA_Machiavelli">Slides</a> | <a href="https://www.youtube.com/watch?v=My65wJ-sBVc">Video</a></div>
+        </div>
+        <div class="row">
+          <div class="four columns">&nbsp;</div>
+          <div class="four columns">Disentangle a new fangled image mangler</div>
+          <div class="two columns">Talk</div>
+          <div class="two columns"><a href="2015_01_LCA_Gyprock">Slides</a> | <a href="https://www.youtube.com/watch?v=XedLGMp38xA">Video</a></div>
+        </div>
 
-<h2>OpenStack Miniconf, PyCon AU, Brisbane, August 2015</h2>
-<li><a href="https://twitter.com/glasnt/status/626897751335309312">"xyz, abc, def"</a> <a href="https://twitter.com/glasnt/status/627020535646412800">[Feedback]</a>
+   	<div class="row">&nbsp;</div>
+        <div class="row">
+          <div class="four columns">Women Who Code<br>Sydney, December 2014</div>
+          <div class="four columns">Hack and Tell - Machiavelli</div>
+          <div class="two columns">Lightning Talk</div>
+          <div class="two columns"><a href="2014_12_WomenWhoCode">Slides</a> | <a href="https://www.youtube.com/watch?v=XedLGMp38xA">Video</a></div>
+        </div>
 
-<h2>Python Sydney (SyPy), July 2015</h2>
-<li><a href="2015_07_SyPy">Hat Rack</a>
+   	<div class="row">&nbsp;</div>
 
-<h2>DevOpsDays Melbourne, July 2015</h2>
-<li>Ignite Karaoke <a href="https://twitter.com/s_mcleod/status/621899282757464064">[buzz]</a>
+        <div class="row">
+          <div class="four columns">DevOps Sydney<br>Sydney, November 2014</div>
+          <div class="four columns">Integrating Machiavelli and agios</div>
+          <div class="two columns">Lightning Talk</div>
+          <div class="two columns"><a href="2015_03_DevOps/HatRack.pdf">Slides</a></div>
+        </div>
+        <div class="row">&nbsp;</div>
+        <div class="row">
+          <div class="four columns">Open Source Developers Conference<br>Gold Coast, October 2014</div>
+          <div class="four columns">Before All Else, Be Graphed</div>
+          <div class="two columns">Talk</div>
+          <div class="two columns"><a href=2014_10_OSDC_Gyprock">Slides</a> | <a href="https://www.youtube.com/watch?v=bQfkXh__vnc">Video</a></div>
+        </div>
+        <div class="row">
+          <div class="four columns">&nbsp;</div>
+          <div class="four columns">Disentangle a new fangled image mangler</div>
+          <div class="two columns">Talk</div>
+          <div class="two columns"><a href="2014_10_OSDC_Machiavelli">Slides</a> | <a href="https://www.youtube.com/watch?v=6i0kMCOOIaY">Video</a></div>
+        </div>
 
-<h2>DevOps Sydney, June, 2015</h2>
-<li><a href="2015_06_DevOps">JavaScript Rant</a> <a href="https://www.youtube.com/watch?v=nx0yt0YsDnA">[Video]</a>
-
-<h2>DevOps, Sydney, March 2015</h2>
-<li><a href="2015_03_DevOps/HatRack.pdf">Hat Rack</a>
-
-<h2>PHP Australia Warm Up, hosted by SydPHP, Sydney, March 2015</h2>
-<li><a href="2015_03_SydPHP/HatRack.pdf">Hat Rack</a>
-
-<h2>Women Who Code, Sydney, December 2014</h2>
-<li><a href="2014_12_WomenWhoCode/">Hack and Tell - Machiavelli</a>
-
-<h2>DevOps, Sydney, November 2014</h2>
-<li><a href="2014_11_DevOps/">Integrating Machiavelli and Nagios</a>
-
-</td></tr></table>
-<br><br><br><br>
-
-<p>A full list can be seen at: <a href="https://github.com/glasnt/talks">https://github.com/glasnt/talks</a>. Alternatively, check out my <a href="http://lanyrd.com/profile/glasnt/">lanyrd profile</a></p>
-</div>
+        <div class="row">&nbsp;</div>
+        <div class="row">
+        <p>A full list can be seen at: <a href="https://github.com/glasnt/talks">https://github.com/glasnt/talks</a>. Alternatively, check out my <a href="http://lanyrd.com/profile/glasnt/">lanyrd profile</a></p>
+    </div>
+    </div>
